# paraview-plugin-example

./: CMakeLists.txt  main.cxx
Plugin/: CMakeLists.txt  CellDerivatives.xml  paraview.plugin
